package model;

public class Administrador {
}
