package model;

public class Comunicacion {
}
