package model;

public class Condominio {
}
