package model;

public class Guardia {
}
