package model;

public class Residente {
}
