@startuml
'https://plantuml.com/class-diagram
note as N1
    <b><color: Red>TODO:
    <b>Completar los atributos, métodos
    <b>y enumeraciones de las clases que faltan
end note
abstract class Usuario
{
    {field} int id
    {field} String user
    {field} String password
    {field} String Nombre
    {field} String Apellido
    {field} String email
    {field} int tipoUsuario
    {method} IniciarSesion()
    {method} RecuperarContrasena()
}
class Administrador 
{
    {method} Registrar()
    {method} ListarUsuarios()
}
class Residente
class Guardia
class Condominio
{
    
    String nombre
    int numBloque
    String Dimensiones
    int numHabitaciones
    List<Unidad> unidades
    List<Reserva> reservas
    List<RegistroPropiedad> registrosPropiedad
    List<ReporteEstadoInmueble> reportesEstadoInmueble
    
    {method} agregarUnidad(Unidad unidad)
    {method} agregarAreaComun(AreaComun areaComun)
    {method} agregarReserva(Reserva reserva)
    {method} agregarRegistroPropiedad(RegistroPropiedad registroPropiedad)
    {method} generarReporteEstadoInmueble()
}
class Unidad
{
    {field} EstadosUnidad estado
}
' enumeración de estados: disponible, reservado, vendido
enum EstadosUnidad {
 DISPONIBLE
 RESERVADO
 VENDIDO
}
class Reserva{
    {method} Crear()
    {method} Modificar()
    {method} Cancelar()
    {method} Listar()
}
class AreaComun
class Visita{
    {field} Usuario usuario
    {field} String nombreVisitante
    {field} String motivoVisita
    {field} Date fecha
    {field} String hora
    {field} String vehiculo
    {field} String tipoUsuario

   {method} registrarProveedor(nombre,motivo,fecha,hora,vehiculo)
   {method} registrarVisita(Usuario,nombre,motivo,fecha,hora,vehiculo)
}
note bottom: "la visita puede no visitar a un \n residente como el caso de proveedores"

class Pago
{
    {field} int id_Pago
    {field} int id_Residente
    {field} Date fecha_Pago
    {field} Date fechaVencimientoPago
    {field} metodoPago id_metodoPago
     'enum metodoPago: efectivo, tarjetas de crédito'
    {field} double Monto_Pago
    {field} tipoPago tPago
    'enum alicuota o extraordinaria'
    'tarjetas de débito o transferencia'
    {field} String estado
    'enum ingreso o egreso'
    {field} String descripcion
   {method} ListarPagosIngresos()
   {method} ListarPagosEgresos()
   {method} AnularPago(id_Pago)
   {method} RegistrarIngreso()
   {method} RegistrarEgreso()
   {method} ListarSaldoPorCuenta(id_Residente)
}

class cuota{
    {field} int id_pago
    {field} int id_cuota
    {field} int numero_cuota
    {field} float monto_cuota
    {field} float fecaVencimiento_cuota
    {method} RegistrarCuota(id_Pago, numero_cuota)
    {method} RegistrarCuota(id_Pago, numero_cuota)
}

class metodoPago{
    {field} int id_metodoPago
    {field} String nombre_MetodoPago
    {method} RegistrarMetodoPago(nombre_MetodoPago)
    {method} ActualizarMetodoPago(nombre_MetodoPago)
    {method} EliminarMetodoPago(id_metodoPago)
}



class ParqueaderoVisita
{
    {field} int numero
    {field} String estado

    {method} cambiarEstadoParqueadero(numero,nuevoEstado) 
}

class Comunicacion
{
    {field} emisor
    {field} receptores
    {field} tipoComunicacion
    'enumeración tipoComunicacion:
    'alerta, directo, anuncio, visita, reservas, pagos
    {field} cuerpo
    {field} fecha
    {method} listarComunicados()
    {method} CrearComunicado()
    {method} ModificarComunicado())
}

Usuario <|-- Administrador
Usuario <|-- Residente
Usuario <|-- Guardia
Administrador "1"--> "*" Condominio: gestiona
Administrador --> AreaComun: gestiona
Administrador --> Reserva: aprueba
Residente "1"-- "*"Unidad: posee
Condominio "1" *-- "*"Unidad: tiene
Condominio "1"*-- "*"AreaComun: tiene
Condominio "1"*-- "*"ParqueaderoVisita: tiene
Guardia -- Visita: registra
Guardia --> ParqueaderoVisita: asigna
'Residente -- AreaComun
Reserva "1" -- "1" AreaComun
Usuario "0..1"<-- "1"Visita: visita
Residente "1" --> "*"Reserva: realiza
Residente "1" --> "*" Pago: realiza
Administrador --> Unidad: asigna
Usuario "1" --> "*" Comunicacion: envia
Administrador"1" --> "*"Pago: supervisa

Pago "1" *-- "*"cuota: contiene
Pago -- metodoPago: posee
'una enumeración para los tipos de unidades
@enduml
